fix: init react

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,13 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+
+/.pnp
+.pnp.js
+
+/coverage
+/build
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
