--- a/package.json
+++ b/package.json
@@ -1,37 +1,62 @@
 {
-    "name": "vue3-demo",
-    "version": "0.0.0",
+    "name": "ddd-demo",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "run-p type-check build-only",
-        "preview": "vite preview",
-        "test:unit": "vitest --environment jsdom --root src/",
-        "build-only": "vite build",
-        "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+        "dev": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "dependencies": {
-        "pinia": "^2.0.28",
-        "vue": "^3.2.45"
+        "@reduxjs/toolkit": "^1.9.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.11",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
+        "react-scripts": "5.0.1",
+        "redux": "^4.2.0",
+        "typescript": "^4.9.4",
+        "web-vitals": "^2.1.4"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
         "@types/jsdom": "^20.0.1",
-        "@types/node": "^18.11.12",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "@vue/eslint-config-typescript": "^11.0.0",
-        "@vue/test-utils": "^2.2.6",
-        "@vue/tsconfig": "^0.1.3",
-        "eslint": "^8.22.0",
-        "eslint-plugin-vue": "^9.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.49.0",
+        "@typescript-eslint/parser": "^5.49.0",
+        "eslint": "^8.32.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.32.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "jsdom": "^20.0.3",
-        "npm-run-all": "^4.1.5",
         "sass": "^1.57.1",
-        "typescript": "~4.7.4",
-        "vite": "^4.0.0",
-        "vitest": "^0.25.6",
-        "vue-router": "^4.1.6",
-        "vue-tsc": "^1.0.12"
+        "typescript": "~4.7.4"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
