--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/jsdom": "^20.0.1",
         "@typescript-eslint/eslint-plugin": "^5.49.0",
         "@typescript-eslint/parser": "^5.49.0",
+        "classnames": "^2.3.2",
         "eslint": "^8.32.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-import-resolver-alias": "^1.1.2",
